--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,6 +7,12 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "agent": {
+    "default_model": {
+      "provider": "lmstudio",
+      "model": "mistralai/mistral-nemo-instruct-2407"
+    }
+  },
   "icon_theme": "Catppuccin Macchiato",
   "vim_mode": true,
   "ui_font_size": 25,
