fix: rename telegram bin

--- a/.config/hypr/workspace.conf
+++ b/.config/hypr/workspace.conf
@@ -7,11 +7,11 @@ exec-once = waybar & hyprpaper
 exec-once = [workspace 1 silent] kitty
 exec-once = [workspace 2 silent] firefox
 exec-once = [workspace 3 silent] obsidian
-exec-once = [workspace 4 silent] telegram-desktop
+exec-once = [workspace 4 silent] Telegram
 exec-once = [workspace 5 silent] yazi
 exec-once = [workspace 5 silent] kitty -e yazi
 exec-once = [workspace 5 silent] kitty -e btop
-exec-once = [workspace 7 silent] lmstudio
+# exec-once = [workspace 7 silent] lmstudio
 # exec-once = [workspace 7 silent] zed
 
 ##############################
